# nussl-demo-via-poetry2nix

./: README.md  pyproject.toml  shell.nix
demo/: __init__.py
