[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Nathan Shelly <nsnshelly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nussl = "1.1.3rc3"
gradio = "^1.2.3"
numpy = "^1.19.2"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
start = 'demo:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
